--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
+        <div class="colorstrip"></div>
         <h1>Pediatric Cancer</h1>
         <b>hello</b>
     </body>
