--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="colorstrip"></div>
-        <h1>Pediatric Cancer</h1>
-        <b>hello</b>
+        <div class="colorstrip">
+            <h1>Pediatric Cancer</h1>
+            <b>hello</b>
+        </div>
     </body>
 </html>
