--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="colorstrip">
             <h1>Pediatric Cancer</h1>
-            <b>hello</b>
+            <b>fight now</b>
         </div>
     </body>
 </html>
