--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="colorstrip">
-            <h1>Pediatric Cancer</h1>
-            <b>fight now</b>
+        <div class="navbar">
+            
+            <a class="logo">Pediatric Cancer</a>
+            <a class="page-links"; style="padding-right: 50px;">Centers</a>
+            <a class="page-links">Research</a>
+            <a class="page-links">News</a>
+            <a class="page-links">Home</a>    
         </div>
+        <div class="colorstrip"; style="text-align: center">
+            <h1 style="text-align: center; font-size: 5.9vmax;" >Pediatric Cancer</h1>
+            <button type="button"; class="button">Learn More</button>
+        </div>
+        <div class="bodystrip"">
+            <h1>A Devestating Disease</h1>
+            <p class="paragraph">     Pediatric Cancer is the deadliest disease in the U.S., killing almost 1,780 children anually. 
+                    Over 20% of children diagnosed with cancer in the U.S. do not survive, and pediatric cancers tend to be
+                    more agressive and deadly than those experienced by adults. 
+            <p>
+        </div>
+        <div class="bodystrip"">
+                <h1>A Coordinated Research Effort</h1>
+                <p class="paragraph">    In children ages 0 to 19, the most common cancers are often much more deadly
+                    than the avarage adult cancer, and as such, more research is required to find effective treatments
+                    while minimizing harmful side effects. To improve the effectiveness of research, researchers around the globe 
+                    must collaborate in order to share information and findings. 
+                <p>
+            </div>
+        <div class="bodystrip"">
+                <h1>A Coordinated Research Effort</h1>
+                <p class="paragraph">    In children ages 0 to 19, the most common cancers are often much more deadly
+                    than the avarage adult cancer, and as such, more research is required to find effective treatments
+                    while minimizing harmful side effects. To improve the effectiveness of research, researchers around the globe 
+                    must collaborate in order to share information and findings. 
+                <p>
+            </div>    
     </body>
 </html>
